@@ -3090,7 +3090,7 @@
         <TR VALIGN="top">
           <TD>ScopeUpdateInterval</TD>
           <TD>The interval in milliseconds between calls to the function that reads scope 
-            properties and updates the user interface. The default is 200, raised from
+            properties and updates the user interface. The default is 150, raised from
             100 on April 10, 2018. For a JEOL, the update function does not normally access
             the microscope so this should be OK.</TD>
         </TR>
