@@ -3,7 +3,8 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
-4/10/18: Raised scope update interval to 200 ms (In 3.6).
+4/10/18: Raised scope update interval to 150 ms and made vacuum update happen
+every ~1.7 sec (In 3.6).
 
 4/10/18: Changes to support Z stage movement for Hitachi HT7800 (In 3.6).
 
